[package]
edition = "2021"
name = "latticelabs_rs"
version = "0.0.0"
authors = ["Jotyy <jotyy318@gmail.com>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.7.0", default-features = false, features = ["napi4"] }
napi-derive = "2.7.0"
aes = { version = "0.7.5", features = ["ctr"] }
block-modes = "0.8.1"
bs58 = "0.4.0"
derive_more = "0.99.17"
ethabi = "16.0.0"
ethereum-types = "0.12.1"
hex = "0.4.3"
libsm = "0.4.1"
num-bigint = "0.4.3"
once_cell = "1.9.0"
rand = "0.6"
rlp = { version = "0.5.0", default-features = false }
rlp-derive = { version = "0.1.0", default-features = false }
scrypt = "0.8.1"
secp256k1 = { version = "0.21", features = ["recovery", "rand"] }
serde = "1.0"
serde_json = "1.0"
sha256 = "1.0.3"
uuid = { version = "0.8", features=["v4"] }

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
